attempt to fix weird spacing on safari

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -27,7 +27,7 @@ body {
 	color: var(--color-bg);
 	display: flex;
 	flex-direction: column;
-	font-family: sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	min-height: 100vh;
 }
 
